--- a/web.css
+++ b/web.css
@@ -5,7 +5,7 @@ body {
 }
 
 .navi {
-  font-size: 22px;
+  font-size: 2rem;
 }
 
 .para {
@@ -20,7 +20,7 @@ button {
   width: 8rem;
   height: 3rem;
   border-radius: 4px;
-  margin: auto 8rem;
+
 }
 
 .twit {
@@ -44,7 +44,7 @@ h2 {
 }
 
 footer {
-  margin: auto 12.5%;
+
   background: lavender;
 }
 
